--- a/proxmox/servarr/docker-compose.yml
+++ b/proxmox/servarr/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - TZ=America/Los_Angeles
       - WEBUI_PORT=8080
       - TORRENTING_PORT=6881
+      - DOCKER_MODS=ghcr.io/vuetorrent/vuetorrent-lsio-mod:latest
     volumes:
       - /config/qbittorrent:/config
       - /data:/data
